
  * checks/binaries:
    + [RA] Exclude packages from the klibc source package from the
      embedded zlib check since klibc legitimately includes its own copy.
      Thanks, maximilian attems.  (Closes: #573914)
  * checks/control-file:
    + [RG] Update package-depends-on-hardcoded-libc exception to also
      exclude eglibc.  Based on a patch from Cyril Brulebois.
      (Closes: #573398)
  * checks/rules:
    + [RA] Allow ant1.7 to satisfy a build requirement for ant.  Thanks,
      Rene Engelhard.  (Closes: #572430)
  * checks/scripts:
    + [ADB] Update the list of octave interpreters, adding octave3.2
      (Closes: #574048) and removing octave2.1 (only available in lenny
      and earlier) and octave3.1.
  * checks/standards-version:
    + [RG] Don't warn about timewarp-standards-version when the
      changelog's distribution is "UNRELEASED."  Thanks, Raphaël Hertzog.
      (Closes: #571616)

  * debian/control:
    + [RG] Update package description to mention Policy version 3.8.4
      instead of 3.8.3.  Should have been done on the previous release.

  * frontend/lintian:
    + [RA] Globally ignore SIGPIPE, forcing error return codes from write.
      Hopefully will resolve some unreproducible occasional crashes.
      (Closes: #558360)

  * lib/Lintian/Tag/Info.pm:
    + [JP] Don't link to references with no URL.  (Closes: #572297)
  * lib/Spelling.pm:
    + [ADB] Remove duplicate entries from the correction list.  Thanks,
      Jakub Wilk.  (Closes: #572260)
    + [ADB] Add a spelling correction for "unecessary".  Thanks, Jakub
      Wilk.  (Closes: #572456)

  * man/lintian-info.1:
    + [CW] Fix typo.

  * reporting/templates/foot.tmpl:
    + [ADB] Replace the "please mail comments to the maintainer" request
      with a pointer to reportbug.

  * t/tests/binaries-multiarch/:
    + [RG] Fix test failure in non-i386 architectures by normalising the
      expected output.  Thanks, Niko Tyni.  (Closes: #568680)
