@@ -1,1 +1,2 @@
 /lib/init/upstart-job etc/init.d/lintian
+/lib/init/upstart-job etc/init.d/lintian-unreg
