@@ -5,3 +5,5 @@ Description: Check proper handling of symlinked init scripts
 Test-Against:
  init.d-script-not-included-in-package
  init.d-script-not-marked-as-conffile
+Test-For:
+ script-in-etc-init.d-not-registered-via-update-rc.d
